[project]
name = "bloggerai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.2",
    "langgraph-cli[inmem]>=0.4.27",
    "uvicorn>=0.48.0",
    "watchdog>=6.0.0",
]
